--- a/src/components/mainIntersectionAnimations/envelope/styles.module.scss
+++ b/src/components/mainIntersectionAnimations/envelope/styles.module.scss
@@ -160,6 +160,7 @@ $breakpoint-mobile: 420px;
     100% {
       z-index: 10;
       width: 77vw;
+      height: 250px;
       transform: translate(10vw, -200px);
     }
   }
@@ -176,6 +177,7 @@ $breakpoint-mobile: 420px;
     100% {
       z-index: 10;
       width: 100vw;
+      height: 150px;
       transform: translate(10vw, -75px);
     }
   }
