--- a/src/components/mainIntersectionAnimations/left-head/bubble/styles.module.scss
+++ b/src/components/mainIntersectionAnimations/left-head/bubble/styles.module.scss
@@ -19,6 +19,6 @@ $breakpoint-mobile: 420px;
   top: 25%;
   transform: translate(-50%, -50%);
   width: max-content;
-  font-family: "Comic Sans MS", "Comic Sans", cursive;
+  font-family: "Luminari", fantasy;
   font-size: clamp(10px, 3vw, 20px);
 }
