--- a/src/components/mainIntersectionAnimations/left-head/styles.module.scss
+++ b/src/components/mainIntersectionAnimations/left-head/styles.module.scss
@@ -1,6 +1,6 @@
 .leftHeadAnimationContainer {
   position: relative;
-  background-color: green;
+  background-color: #164B45;
   width: 30%;
   height: 100%;
   left: 0;
