--- a/src/components/mainIntersectionAnimations/styles.module.scss
+++ b/src/components/mainIntersectionAnimations/styles.module.scss
@@ -16,6 +16,6 @@ $breakpoint-mobile: 420px;
   justify-content: flex-end;
 
   @media (max-width: $breakpoint-mobile) {
-    height: 100px;
+    height: 150px;
   }
 }
